#1819 refactor: changed method getFormById in FormService