@@ -1,21 +1,17 @@
 package edu.eltex.forms.service;
 
-import edu.eltex.forms.dto.AnswerResponseDTO;
 import edu.eltex.forms.dto.FormRequestDTO;
 import edu.eltex.forms.dto.FormResponseDTO;
-import edu.eltex.forms.dto.QuestionResponseDTO;
 import edu.eltex.forms.entities.Form;
-import edu.eltex.forms.mapper.AnswerMapper;
 import edu.eltex.forms.mapper.FormMapper;
-import edu.eltex.forms.mapper.QuestionMapper;
 import edu.eltex.forms.model.FormModel;
 import edu.eltex.forms.repository.FormRepository;
 import jakarta.persistence.EntityNotFoundException;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -23,17 +19,11 @@ public class FormService {
 
     private final FormRepository formRepository;
     private final FormMapper formMapper;
-    private final QuestionMapper questionMapper;
-    private final AnswerMapper answerMapper;
 
-    public FormService(FormRepository formRepository,
-                       FormMapper formMapper,
-                       QuestionMapper questionMapper,
-                       AnswerMapper answerMapper) {
+    @Autowired
+    public FormService(FormRepository formRepository, FormMapper formMapper) {
         this.formRepository = formRepository;
         this.formMapper = formMapper;
-        this.questionMapper = questionMapper;
-        this.answerMapper = answerMapper;
     }
 
     public FormResponseDTO createForm(FormRequestDTO dto) {
@@ -46,28 +36,13 @@ public class FormService {
     public List<FormResponseDTO> getAllForms() {
         return StreamSupport.stream(formRepository.findAll().spliterator(), false)
                 .map(formMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public FormResponseDTO getFormById(Integer id) {
         Form formEntity = formRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Form not found"));
-
-        FormResponseDTO formResponseDTO = formMapper.toDto(formEntity);
-
-        List<QuestionResponseDTO> questionResponseDTOs = formEntity.getQuestions().stream().map(question -> {
-            List<AnswerResponseDTO> questionAnswers = question.getAnswers().stream()
-                    .filter(answer -> answer.getQuestion().equals(question))
-                    .map(answerMapper::toDto)
-                    .toList();
-
-            QuestionResponseDTO questionDTO = questionMapper.toDto(question);
-            questionDTO.setAnswers(questionAnswers);
-            return questionDTO;
-        }).collect(Collectors.toList());
-
-        formResponseDTO.setQuestions(questionResponseDTOs);
-        return formResponseDTO;
+        return formMapper.toDto(formEntity);
     }
 
     public boolean deleteForm(Integer id) {
